--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,7 @@ body {
 	font-size: 26px;
 }
 
+
 nav ul {
 	display: flex;
 	list-style-type: none;
@@ -40,6 +41,7 @@ nav a {
 
 .social-link img {
 	width: 20px;
+	height: 20px;
 }
 
 #about {
@@ -68,7 +70,8 @@ nav a {
 }
 
 .picture img {
-	width: 100%;
+	width: 560px;
+	height: 558.5px;
 
 }
 #about-me {
@@ -102,12 +105,18 @@ nav a {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: black;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
-	color: #000
+	color: #000;
+}
+.nav-pills .nav-link:hover {
+	cursor: pointer;
+}
+.nav-pills .nav-link:active {
+	background-color: #BEB45A;
 }
 .item-column {
 	position: relative;
@@ -122,8 +131,8 @@ nav a {
 }
 .gallery-item {
 	position: absolute;
-	width: 100%;
-	height: 100%;
+	width: 440px;
+	height: 440px;
 	object-fit: cover;
 	padding: .5em;
 }
