update(font-family)

--- a/assets/style.css
+++ b/assets/style.css
@@ -73,7 +73,7 @@ nav a {
 	font-size: 30px;
 }
 .about-me__introduction {
-	font-family: 'Spectral';
+	font-family: Arial, Helvetica, sans-serif ;
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
