update(social-media-meta)

--- a/assets/style.css
+++ b/assets/style.css
@@ -97,7 +97,7 @@ nav a {
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: black;
 	background-color: #BEB45A;
-	border-radius:0 ;
+	border-radius: 5px;
 }
 .nav-pills .nav-link {
 	color: #000;
@@ -105,8 +105,8 @@ nav a {
 .nav-pills .nav-link:hover {
 	cursor: pointer;
 }
-.nav-pills .nav-link:active {
-	background-color: #BEB45A;
+.active-tag {
+	background-color: #BEB45A !important;
 }
 .item-column {
 	position: relative;
