update(debugging-carousel)

--- a/assets/style.css
+++ b/assets/style.css
@@ -97,7 +97,7 @@ nav a {
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: black;
 	background-color: #BEB45A;
-	border-radius:0 ;
+	border-radius: 5px;
 }
 .nav-pills .nav-link {
 	color: #000;
@@ -107,6 +107,9 @@ nav a {
 }
 .nav-pills .nav-link:active {
 	background-color: #BEB45A;
+}
+.active-tag {
+	background-color: #BEB45A !important;
 }
 .item-column {
 	position: relative;
@@ -126,6 +129,10 @@ nav a {
 	object-fit: cover;
 	padding: .5em;
 }
+.modal-body {
+	display: flex;
+	justify-content: center;
+}
 .mg-prev, .mg-next {
 	width: 30px;
 	height: 30px;
@@ -134,6 +141,14 @@ nav a {
 	align-items: center;
 	display: flex;
 	font-size: 24px;
+}
+
+.arrow-hidden-true {
+	display: none;
+}
+
+.arrow-hidden-false {
+	display: block;
 }
 
 .quote {
